[package]
name = "catchts-service"
version = "0.1.0"
authors = ["captain-yossarian <sergiybiluk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[dependencies]
actix-web = { version = "3", features = ["rustls"] }
serde="*"
actix-cors = "0.5.4"
mysql = "*"
tokio = { version = "1", features = ["full"] }
serde_json="*"
rand = "0.7.2"
env_logger="*"
reqwest = { version = "0.11.2", features = ["json"] }

